--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -14,7 +14,19 @@
 }
 .photo img{
     width: 20vw;
-}
+    animation-duration: 1s;
+    animation-name: fadein;
+  }
+  
+  @keyframes fadein {
+    from {
+      opacity: 0.5;
+    }
+  
+    to {
+        opacity: 1;
+    }
+  }
 @media screen and (max-width:683px) {
     .grid {
         grid-template-columns: 1fr;
