--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 body{
     margin: 0px;
 }
+::-webkit-scrollbar { 
+    width: 0px;
+}
